src/styles/index.css
@import './fonts.css';
@import './tailwind.css';
@import './theme.css';

* {
  font-family: 'Poppins', sans-serif;
}

html {
  height: 100%;
  height: 100dvh;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #F7F7F5;
  overscroll-behavior: none;
  -webkit-tap-highlight-color: transparent;
}

#root {
  height: 100%;
  display: flex;
  flex-direction: column;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

